# DECISIVE20

./: .gitignore  DECISIVE20_V1_CLI_CODEX_TASK.md  DESIGN.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
decisive20/: __init__.py  __main__.py  cli.py  constants.py  engine.py  game.py  launcher.py  models.py  paths.py  renderer.py  scenario_loader.py  session.py  validators.py
decisive20/web/: __init__.py  app.py  store.py
decisive20/web/static/: index.html
decisive20/web/static/assets/: index-BTCSGFGw.js  index-BUjk4BZb.js  index-Bd_rwp8f.css  index-CbdjosW8.css  index-CnVzVRo9.css  index-DaXfRrim.js
docs/: GAME_RULES_V1.md  SCENARIO_SCHEMA.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  constants.js  styles.css  useCountUp.js
frontend/src/components/: ActionBar.jsx  EndOverlay.jsx  EventLog.jsx  ForcePanel.jsx  Header.jsx  ResourcePanel.jsx  RoundBanner.jsx  SetupScreen.jsx  ZoneMap.jsx
packaging/: Decisive20.spec  build_exe.bat  build_exe.ps1  make_release_zip.bat  make_release_zip.ps1
scenarios/: kaohsiung_landing_v1.json  taichung_defense_v1.json
tests/: test_cli.py  test_engine.py  test_launcher.py  test_loader.py  test_persistence.py  test_session.py  test_validators.py  test_victory_conditions.py  test_web_api.py
