[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decisive20"
version = "0.1.0"
description = "CLI prototype for the Decisive 20 strategic decision game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["decisive20"]

[tool.pytest.ini_options]
testpaths = ["tests"]
