[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decisive20"
version = "0.1.0"
description = "CLI prototype for the Decisive 20 strategic decision game."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn>=0.29"]
exe = ["pyinstaller>=6.0"]

[tool.setuptools]
packages = ["decisive20", "decisive20.web"]

[tool.setuptools.package-data]
"decisive20.web" = ["static/*.html", "static/assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
